[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/ExerciseSelect.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Store.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/SidePanel.tscn" type="PackedScene" id=5]

[node name="Main" type="Node" groups=["UI"]]
script = ExtResource( 3 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_left = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="ExerciseSelect" parent="." instance=ExtResource( 2 )]
anchor_left = 0.25
margin_left = 0.0

[node name="Store" parent="." instance=ExtResource( 4 )]
visible = false
anchor_left = 0.25
margin_left = 0.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SidePanel" parent="." instance=ExtResource( 5 )]

[connection signal="list_changed" from="ExerciseSelect" to="." method="makeExerciseDict"]
[connection signal="sent_info" from="ExerciseSelect" to="." method="receivedExerciseInfo"]
[connection signal="clicked_return" from="Store" to="." method="returnToExerciseSelect"]
[connection signal="experience_purchase_made" from="Store" to="." method="_on_Store_experience_purchase_made"]
[connection signal="purchase_made" from="Store" to="." method="storePurchaseMade"]
[connection signal="clicked_store" from="SidePanel" to="." method="openStore"]
[connection signal="completed_rep" from="SidePanel" to="." method="completedRep"]
